# obs-vlc-dshow

./: CMakeLists.txt  README.md
data/locale/: en-US.ini  ja-JP.ini
src/: obs-vlc-dshow-plugin.c  obs-vlc-dshow-plugin.h  obs-vlc-dshow-source.c  obs-vlc-dshow-source.h  vlc_functions.c  vlc_functions.h
